--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,15 @@
-/* stylelint-disable */
+#logo {
+  width: 10rem;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: lightgray;
+}
+
+li {
+  list-style-type: none;
+  margin: 0 1rem;
+}
