--- a/src/style.css
+++ b/src/style.css
@@ -8,8 +8,8 @@ body {
   background-color: #eeeefe;
 }
 
-li {
-  list-style-type: none;
+.logo {
+  width: 10rem;
 }
 
 nav {
@@ -24,12 +24,59 @@ nav {
   font-weight: bold;
 }
 
-.logo {
-  width: 10rem;
+li {
+  list-style-type: none;
+}
+
+.active {
+  text-decoration: underline;
+  text-underline-offset: 4px;
 }
 
 hr.hline {
   border: 1px solid #292929;
+}
+
+#list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  row-gap: 0.5rem;
+  margin: 0.5rem 0;
+}
+
+.card {
+  width: 28vw;
+  padding: 0.25rem;
+  border-radius: 8px;
+  background-color: #ffe165;
+}
+
+.details {
+  border-radius: 8px;
+  background-color: #9aca4ed7;
+  border: 1px solid #88b344;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0.5rem 0;
+}
+
+.sprite {
+  background-color: #292929;
+  width: 85%;
+  max-width: 150px;
+}
+
+.name {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.like-btn {
+  width: 1rem;
 }
 
 footer {
