--- a/src/style.css
+++ b/src/style.css
@@ -12,17 +12,18 @@ body {
 }
 
 .logo {
-  width: 15rem;
+  width: 10rem;
 }
 
 nav {
   display: flex;
   align-items: center;
-  background-color: #fde68a;
+  background-color: #48bb78;
   margin: 10px 4px 4px 10px;
   border-radius: 10px;
   opacity: 85%;
   padding: 10px;
+  height: 35vw;
 }
 
 .nav-list {
@@ -43,51 +44,69 @@ li {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  row-gap: 0.5rem;
-  margin: 0.5rem;
-}
-
-.card {
-  width: 28vw;
-  padding: 0.25rem;
-  border-radius: 8px;
-  background-color: #fde68a;
-  opacity: 90%;
-}
-
-.details {
-  border-radius: 8px;
-  background-color: #9aca4ed7;
-  border: 1px solid #88b344;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 0.5rem 0;
-}
-
-.sprite {
-  width: 85%;
-  min-width: 100px;
-}
-
-.name {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.like-btn {
-  width: 1rem;
+  row-gap: 2rem;
+  margin: 2rem;
 }
 
 footer {
   padding: 5px;
   font-style: italic;
   font-weight: bold;
-  background-color: #fde68a;
+  background-color: #48bb78;
   height: 50px;
-  margin: 10px 4px 4px 10px;
+  margin: -25px 4px 4px 10px;
   border-radius: 10px;
   opacity: 80%;
+}
+
+.like-con {
+  position: relative;
+}
+
+.likes {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  background-color: red;
+  color: white;
+  font-size: 12px;
+  font-weight: bold;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+}
+
+.card {
+  background-color: #48bb78;
+  opacity: 90%;
+}
+
+@media only screen and (min-width: 768px) {
+  nav {
+    height: 10vw;
+  }
+
+  .pokemon-nav {
+    font-size: 29px;
+    left: 250px;
+    position: relative;
+  }
+
+  .logo {
+    position: relative;
+    left: 50px;
+    width: 20vw;
+  }
+
+  #list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    row-gap: 3rem;
+    margin: 4rem;
+  }
 }
