--- a/src/output.css
+++ b/src/output.css
@@ -592,20 +592,8 @@ video {
   bottom: 60px;
 }
 
-.bottom-\[80px\] {
-  bottom: 80px;
-}
-
 .left-0 {
   left: 0px;
-}
-
-.left-\[-225px\] {
-  left: -225px;
-}
-
-.left-\[130px\] {
-  left: 130px;
 }
 
 .right-0 {
@@ -616,28 +604,52 @@ video {
   right: -8px;
 }
 
+.right-\[-90px\] {
+  right: -90px;
+}
+
 .right-\[115px\] {
   right: 115px;
+}
+
+.right-\[22px\] {
+  right: 22px;
+}
+
+.right-\[65px\] {
+  right: 65px;
 }
 
 .top-0 {
   top: 0px;
 }
 
-.top-\[-30px\] {
-  top: -30px;
+.top-\[-16px\] {
+  top: -16px;
 }
 
-.top-\[-95px\] {
-  top: -95px;
+.top-\[-20px\] {
+  top: -20px;
+}
+
+.top-\[-215px\] {
+  top: -215px;
+}
+
+.top-\[-33px\] {
+  top: -33px;
+}
+
+.top-\[160px\] {
+  top: 160px;
 }
 
 .top-\[325px\] {
   top: 325px;
 }
 
-.top-\[55px\] {
-  top: 55px;
+.top-\[40px\] {
+  top: 40px;
 }
 
 .z-10 {
@@ -686,6 +698,10 @@ video {
   margin-bottom: 0.5rem;
 }
 
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
 .mr-2 {
   margin-right: 0.5rem;
 }
@@ -696,6 +712,10 @@ video {
 
 .mt-4 {
   margin-top: 1rem;
+}
+
+.mt-6 {
+  margin-top: 1.5rem;
 }
 
 .block {
@@ -860,6 +880,14 @@ video {
   grid-template-columns: repeat(7, minmax(0, 1fr));
 }
 
+.flex-row {
+  flex-direction: row;
+}
+
+.flex-col {
+  flex-direction: column;
+}
+
 .flex-wrap {
   flex-wrap: wrap;
 }
@@ -938,10 +966,6 @@ video {
   border-radius: 0.5rem;
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
 .rounded-l-lg {
   border-top-left-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
@@ -980,8 +1004,9 @@ video {
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
-.border-transparent {
-  border-color: transparent;
+.bg-blue-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(191 219 254 / var(--tw-bg-opacity));
 }
 
 .bg-blue-500 {
@@ -1035,11 +1060,6 @@ video {
 
 .bg-yellow-200\/90 {
   background-color: rgb(254 240 138 / 0.9);
-}
-
-.bg-yellow-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(234 179 8 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-50 {
@@ -1179,9 +1199,19 @@ video {
   line-height: 2.25rem;
 }
 
+.text-blue-100 {
+  --tw-text-opacity: 1;
+  color: rgb(219 234 254 / var(--tw-text-opacity));
+}
+
 .text-blue-200 {
   --tw-text-opacity: 1;
   color: rgb(191 219 254 / var(--tw-text-opacity));
+}
+
+.text-blue-500 {
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
 }
 
 .text-blue-600 {
@@ -1242,12 +1272,6 @@ video {
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-sm {
-  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1372,6 +1396,52 @@ footer {
   opacity: 90%;
 }
 
+.form-input,
+.form-textarea {
+  padding: 0.5rem;
+  border-radius: 0.25rem;
+  border: 1px solid #e2e8f0;
+  transition: border-color 0.2s ease-in-out;
+  resize: none;
+}
+
+.form-textarea {
+  height: 50px;
+  width: 130px;
+}
+
+.form-input {
+  width: 130px;
+  height: 30px;
+}
+
+.form-input:focus,
+.form-textarea:focus {
+  outline: none;
+  border-color: #f6ad55;
+}
+
+.btn {
+  padding: 0.1rem 0.5rem;
+  border-radius: 0.25rem;
+  transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out, color 0.2s ease-in-out;
+}
+
+.btn-primary {
+  background-color: #f6ad55;
+  border-color: #f6ad55;
+  color: #fff;
+}
+
+.btn-primary:hover {
+  background-color: #ed8936;
+  border-color: #ed8936;
+}
+
+.btn-primary:focus {
+  box-shadow: 0 0 0 3px rgba(246, 173, 85, 0.4);
+}
+
 @media only screen and (min-width: 768px) {
   nav {
     height: 10vw;
@@ -1395,6 +1465,19 @@ footer {
     justify-content: space-between;
     row-gap: 3rem;
     margin: 4rem;
+  }
+
+  .form-textarea {
+    height: 90px;
+    width: 180px;
+  }
+
+  .form-input {
+    width: 182px;
+  }
+
+  .btn {
+    padding: 0.5rem 1rem;
   }
 }
 
@@ -1423,11 +1506,6 @@ footer {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-yellow-600:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(202 138 4 / var(--tw-bg-opacity));
-}
-
 .hover\:text-blue-600:hover {
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity));
@@ -1443,20 +1521,9 @@ footer {
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
-.focus\:border-yellow-300:focus {
-  --tw-border-opacity: 1;
-  border-color: rgb(253 224 71 / var(--tw-border-opacity));
-}
-
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
-}
-
-.focus\:ring:focus {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
 .focus\:ring-2:focus {
@@ -1479,20 +1546,6 @@ footer {
 .focus\:ring-gray-200:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(229 231 235 / var(--tw-ring-opacity));
-}
-
-.focus\:ring-yellow-200:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(254 240 138 / var(--tw-ring-opacity));
-}
-
-.focus\:ring-opacity-50:focus {
-  --tw-ring-opacity: 0.5;
-}
-
-.active\:bg-yellow-700:active {
-  --tw-bg-opacity: 1;
-  background-color: rgb(161 98 7 / var(--tw-bg-opacity));
 }
 
 .dark .dark\:border-blue-500 {
@@ -1598,12 +1651,32 @@ footer {
 }
 
 @media (min-width: 768px) {
+  .md\:right-\[-15px\] {
+    right: -15px;
+  }
+
   .md\:right-\[170px\] {
     right: 170px;
   }
 
+  .md\:right-\[43px\] {
+    right: 43px;
+  }
+
+  .md\:top-\[-55px\] {
+    top: -55px;
+  }
+
+  .md\:top-\[10px\] {
+    top: 10px;
+  }
+
   .md\:top-\[400px\] {
     top: 400px;
+  }
+
+  .md\:top-\[55px\] {
+    top: 55px;
   }
 
   .md\:w-1\/2 {
@@ -1616,13 +1689,15 @@ footer {
 }
 
 @media (min-width: 1024px) {
+  .lg\:mt-2 {
+    margin-top: 0.5rem;
+  }
+
+  .lg\:mt-2\.5 {
+    margin-top: 0.625rem;
+  }
+
   .lg\:w-2\/5 {
     width: 40%;
-  }
-}
-
-@media (min-width: 1280px) {
-  .xl\:w-1\/3 {
-    width: 33.333333%;
   }
 }
