--- a/src/output.css
+++ b/src/output.css
@@ -640,8 +640,8 @@ video {
   top: -33px;
 }
 
-.top-\[160px\] {
-  top: 160px;
+.top-\[-45px\] {
+  top: -45px;
 }
 
 .top-\[325px\] {
@@ -650,6 +650,10 @@ video {
 
 .top-\[40px\] {
   top: 40px;
+}
+
+.top-\[160px\] {
+  top: 160px;
 }
 
 .z-10 {
@@ -688,6 +692,11 @@ video {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .mb-1 {
@@ -1232,6 +1241,11 @@ video {
 .text-gray-600 {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
+.text-gray-700 {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
 .text-gray-900 {
